# brdf

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  generateDoc.sh
docs/: _b_r_d_f_map_dialog_8cpp.html  _b_r_d_f_map_dialog_8cpp__incl.dot  _b_r_d_f_map_dialog_8cpp__incl.md5  _b_r_d_f_map_dialog_8h.html  _b_r_d_f_map_dialog_8h__dep__incl.dot  _b_r_d_f_map_dialog_8h__dep__incl.md5  _b_r_d_f_map_dialog_8h__incl.dot  _b_r_d_f_map_dialog_8h__incl.md5  _b_r_d_f_map_dialog_8h_source.html  _b_r_d_f_map_dialog_8hpp.html  _b_r_d_f_map_dialog_8hpp__dep__incl.dot  _b_r_d_f_map_dialog_8hpp__dep__incl.md5  _b_r_d_f_map_dialog_8hpp__incl.dot  _b_r_d_f_map_dialog_8hpp__incl.md5  _b_r_d_f_map_dialog_8hpp_source.html  _b_r_d_f_map_display_8cpp.html  _b_r_d_f_map_display_8cpp.js  _b_r_d_f_map_display_8cpp__incl.dot  _b_r_d_f_map_display_8cpp__incl.md5  _b_r_d_f_map_display_8h.html  _b_r_d_f_map_display_8h__dep__incl.dot  _b_r_d_f_map_display_8h__dep__incl.md5  _b_r_d_f_map_display_8h__incl.dot  (+453 more)
src/brdf/: BRDFMeasuredMERL.cpp  BRDFMeasuredMERL.h  CMakeLists.txt  MainWindow.cpp  ParameterGroupWidget.cpp  ParameterGroupWidget.h  ParameterWindow.cpp  ParameterWindow.h  SharedContextGLWidget.h  brdf.pro
src/brdf/ChefDevr/: BRDFMapDialog.cpp  BRDFMapDialog.h  BRDFMapDialog.hpp  BRDFMapDisplay.cpp  BRDFMapDisplay.h  BRDFMapDisplay.hpp  BRDFMapPoint.cpp  BRDFMapPoint.h  BRDFMapScene.cpp  BRDFMapScene.h  BRDFReconstructed.cpp  BRDFReconstructed.h  BRDFReconstructed.hpp  BRDFReconstructionModel.cpp  BRDFReconstructionModel.h  BRDFReconstructionModel.hpp  BRDFReconstructionModelSmallStorage.cpp  BRDFReconstructionModelSmallStorage.h  BRDFReconstructionModelSmallStorage.hpp  BRDFReconstructionModelWithZ.cpp  BRDFReconstructionModelWithZ.h  BRDFReconstructionModelWithZ.hpp  ReconstructionThread.h  WaitingDisplay.cpp  WaitingDisplay.h
src/images/: test
(+106 files in other folders)
